change size modal to solve bug spacing on larger screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -312,7 +312,7 @@ main {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80vw;
+    width: 65vw;
     max-width: 80vw;
 }
 
